# pytest-pdf

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
pytest_pdf/: __report.py  chart.py  group_by_key.py  hook_specs.py  hooks.py  mkdir.py  options.py  pdf_report.py  plugin.py  report.py  report_info.py  report_title.py  result.py
tests/: _test_plugin.py  test_group_by_key.py  test_groupby.py  test_pdf_plugin.py  test_plugin.py  test_pytest_pdf.py  test_sum.py
tests/tests/: test_simple.py
