[tool.poetry]
name = "pytest-pdf"
version = "0.1.0"
description = ""
authors = ["Gerrit Schrader <gerrit.schrader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^3.5.59"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
requires = ["setuptools >= 49.2.1", "wheel >= 0.34.2"]
build-backend = "setuptools.build_meta"

# [tool.pytest.ini_options]
# addopts = "--pdf test_report.pdf"

[tool.black]
line-length = 120
